--- a/developers/connectors/telegram.mdx
+++ b/developers/connectors/telegram.mdx
@@ -28,7 +28,7 @@ Enjoy ! 🎉
 
 <div style={{ textAlign: 'center' }}>
   <video width="640" height="480" controls>
-    <source src="https://quivr-cms.s3.eu-west-3.amazonaws.com/quivr_telegram_bot_283a935f26.mp4" type="video/mp4"/>
+    <source src="" type="video/mp4"/>
     Your browser does not support the video tag.
   </video>
 </div>
