remove the link

--- a/home/intro.mdx
+++ b/home/intro.mdx
@@ -20,7 +20,7 @@ Welcome to the documentation of Labeeb! This is the place where you’ll find he
   <Card
     title="Video Installation"
     icon="youtube"
-    href="https://dub.sh/quivr-demo"
+    href=""
   >
     We've cooked some video materials to get you in-depth assistance for your setup.
   </Card>
